# multi-source-finance-etl

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample/: fx_rates.csv  transactions.csv
docs/: architecture.md  business_rules.md
sql/ddl/: init_postgres.sql  snowflake_schema.sql
src/finance_etl/: __init__.py  main.py
src/finance_etl/config/: __init__.py  logging_config.py  settings.py
src/finance_etl/extract/: __init__.py  api_extractor.py  oracle_extractor.py  postgres_extractor.py  sftp_extractor.py
src/finance_etl/load/: __init__.py  redis_loader.py  s3_loader.py  snowflake_loader.py
src/finance_etl/models/: __init__.py  customer.py  fx_rate.py  transaction.py
src/finance_etl/orchestration/: __init__.py  dag_finflow_daily.py
src/finance_etl/quality/: __init__.py  expectations.py
src/finance_etl/transform/: __init__.py  currency.py  dq.py  fraud.py  rfm.py  sox.py
src/finance_etl/utils/: __init__.py  metrics.py  retries.py
tests/: conftest.py  test_models.py
tests/test_transform/: test_currency.py  test_fraud.py  test_sox.py
