[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_etl"
version = "0.1.0"
description = "Multi-source financial ETL: Oracle/SFTP/APIs into Snowflake with fraud scoring and SOX checks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["etl", "finance", "snowflake", "airflow", "data-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    # Data processing
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    # DB drivers
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "oracledb>=2.0.0",
    "snowflake-connector-python>=3.7.0",
    "snowflake-sqlalchemy>=1.5.0",
    # HTTP & APIs
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "requests>=2.31.0",
    # SFTP
    "paramiko>=3.4.0",
    # Cloud
    "boto3>=1.34.0",
    "s3fs>=2024.2.0",
    # Redis
    "redis>=5.0.0",
    # Config & validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "great-expectations>=0.18.0",
    # Logging & metrics
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Date/time
    "pytz>=2024.1",
    "python-dateutil>=2.9.0",
    # YAML
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.9.0",
    "ipython>=8.22.0",
    "faker>=24.0.0",
]
airflow = [
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-snowflake>=5.4.0",
    "apache-airflow-providers-amazon>=8.18.0",
    "apache-airflow-providers-postgres>=5.10.0",
]

[project.scripts]
finance_etl = "finance_etl.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "S", "A", "C4", "T20"]
ignore = ["S101", "T201"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --tb=short"
markers = [
    "unit: unit tests",
    "integration: integration tests requiring infra",
    "slow: slow tests",
]
